--- a/.github/workflows/poc.yml
+++ b/.github/workflows/poc.yml
@@ -28,11 +28,15 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install pyyaml
+          pip install pyyaml httpx selectolax
 
       - name: Run script (simulate)
         run: |
           python scripts/collect_and_participate.py --simulate
+
+      - name: Probe concours page (read-only)
+        run: |
+          python scripts/probe_form.py
 
       - name: Commit & push generated files
         run: |
