--- a/.github/workflows/poc.yml
+++ b/.github/workflows/poc.yml
@@ -28,11 +28,23 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install pyyaml httpx selectolax
+          pip install pyyaml httpx selectolax playwright
+
+      - name: Install Playwright browsers
+        run: |
+          python -m playwright install --with-deps chromium
 
       - name: Run script (simulate)
         run: |
           python scripts/collect_and_participate.py --simulate
+
+      - name: Probe concours page (read-only)
+        run: |
+          python scripts/probe_form.py
+
+      - name: Prefill (Playwright, no-submit)
+        run: |
+          python scripts/prefill_playwright.py
 
       - name: Probe concours page (read-only)
         run: |
